2009-01-08  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/version.rb: version 0.0.3.

	* lib/gluon/po.rb, lib/gluon/rs.rb: URL map not found exception.

2009-01-06  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/controller.rb, lib/gluon/po.rb, lib/gluon/rs.rb,
	lib/gluon/urlmap.rb: path filter block for class2path `path_args'.

2009-01-04  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/urlmap.rb: obsolete `path_filter' of mount.

2008-12-10  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/builder.rb: obsolete auto_reload and Rack::Reloader is
	used.

2008-12-09  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/builder.rb: rackup map.
	Rack::ShowExceptions is not default.

2008-12-03  TOKI Yoshinori  <toki@freedom.ne.jp>

	* run/server/gluon.ru: obsolete.

	* lib/gluon/builder.rb: rackup block in config.rb.

2008-12-02  TOKI Yoshinori  <toki@freedom.ne.jp>

	* run/cgi-bin/gluon.cgi: configuration file of CGI local
	environment.

	* run/server/webrick_cgi: CGI server.

	* run/cgi-bin/run.cgi -> run/cgi-bin/gluon.cgi.

	* bin/gluon_example, bin/gluon_setup, lib/gluon/setup.rb: renewal
	architecture.

	* bin/gluon_update: obsolete.

2008-11-30  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/fstore.rb: session store by file.

2008-11-25  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/application.rb, lib/gluon/errmap.rb: error handler.

2008-11-24  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/application.rb: default handler.

2008-11-17  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/builder.rb: block syntax of back-end service for
	configuration.

	* lib/gluon/po.rb: settings of each attribute of HTML element.

2008-11-16  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/backend.rb: backend service for application.

2008-11-15  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/htmlview.rb: HTML embedded view.

2008-10-23  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/ckview.rb, lib/gluon/po.rb: optional `id' and `class'